[package]
name = "freecodecamp-music-radio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio ={ version = "1", features = ["rt-multi-thread", "macros"]}
reqwest = { version = "0.11", features = ["blocking"] }
rodio = { version = "0.16", features = ["default"]}
tokio-tungstenite = {version = "0.17", features = ["native-tls"]}
futures = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minimp3 = "0.5"